Thu Aug  3 09:17:06 2000  Owen Taylor  <otaylor@redhat.com>

	* gdk/gdkrectangle.c (gdk_rectangle_intersect): Applied patch from
	Peter Osterlund to simplify the code while keeping the
	functionality the same.

Wed Aug  2 14:57:38 2000  Owen Taylor  <otaylor@redhat.com>

	* gdk/gdkwindow.c (gdk_window_process_updates_internal): Move
	is_viewable() test further inside the function, since removing the 
	window from the redraw list without clearing ->update_area
	was also very broken.

2000-08-02  Tor Lillqvist  <tml@iki.fi>

	* configure.in: Check for <unistd.h>.

2000-08-01  Martin Baulig  <baulig@suse.de>

	* gtk/gtkmain.c (gtk_init_check): Use g_message() and not g_warning()
	to display the message that this is a development version of GTK+.

Mon Jul 31 18:37:36 2000  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkentry.c (entry_adjust_scroll): Fix problem where computation
	was depending on widget->allocation instead of the width of text_area,
	which was incorrect for subclasses like GtkSpinButton.

	* gdk/gdkpango.c (gdk_draw_layout): Fix a couple of typos
	with width == 1 tests that should be width == -1.

Mon Jul 31 16:45:48 2000  Owen Taylor  <otaylor@redhat.com>

	* gdk/gdkwindow.c (gdk_window_process_updates_internal): Replace broken, 
	(broken, Elliot, every single window blank on X) custom code with call
	to gdk_window_is_viewable() which a) prevents code duplicate and
	b) works. 

2000-07-31  Elliot Lee  <sopwith@redhat.com>

	* gtk/gtkcolorsel.c: We really do need to include gdkfb.h in order to get the GDK_PARENT_ROOT() macro to work.
	* gtk/gtkmarshal.list: Add NONE:STRING,POINTER
	* gdk/gdkwindow.c: Don't send expose events, or invalidate pieces of, windows that aren't shown.
	* gdk/linux-fb: Redraw-when-menu-hidden solved, plus a bunch of pointer grab stuff.

Mon Jul 31 13:53:16 BST 2000  Tony Gale <gale@gtk.org>

        * docs/gtkfaq.sgml docs/gtk-faq.sgml:
	  s/gtk_main_iteration/g_main_iteration/

	  Did this already in change: